# libloot

./: .travis.yml  CMakeLists.txt
cmake/: esplugin.cmake  gtest.cmake  libgit2.cmake  libloadorder.cmake  loot-condition-interpreter.cmake  spdlog.cmake  yaml-cpp.cmake
include/loot/: api_decorator.h
src/api/: plugin.cpp  plugin.h
src/api/game/: load_order_handler.h
src/api/helpers/: text.cpp
src/api/metadata/: condition_evaluator.h
src/api/sorting/: plugin_sorter.cpp  plugin_sorting_data.cpp  plugin_sorting_data.h
src/tests/api/internals/: main.cpp
src/tests/api/internals/helpers/: text_test.h
